infrastructure/networking/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: infra
  annotations:
    metallb.io/loadBalancerIPs: 192.168.1.51
spec:
  type: LoadBalancer
  selector:
    app: unifi
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
    - name: https-admin
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: inform
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: discovery
      port: 10001
      targetPort: 10001
      protocol: UDP
    - name: speedtest
      port: 6789
      targetPort: 6789
      protocol: TCP
    - name: guest-http
      port: 8880
      targetPort: 8880
      protocol: TCP
    - name: guest-https
      port: 8843
      targetPort: 8843
      protocol: TCP
    - name: ssdp
      port: 1900
      targetPort: 1900
      protocol: UDP
    - name: syslog
      port: 5514
      targetPort: 5514
      protocol: UDP
