infrastructure/networking/unifi/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: infra
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`unifi.stoneforge.dev`)
      kind: Rule
      services:
        - name: unifi
          port: 443
          scheme: https
          serversTransport: unifi-insecure
  tls: {}
